Salesforce/main/default/objects/Proyecto_sistemas__c/Proyecto_sistemas__c.object-meta.xml
<CustomObject>
    <label>Proyecto Sistemas</label>
    <nameField>
        <label>Nombre de Proyecto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proyectos Sistemas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>