Salesforce/main/default/objects/Proyecto_sistemas__c/fields/Sem_Aprovada__c.field-meta.xml
<CustomField>
    <fullName>Sem_Aprovada__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sem. Aprovada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>